# extra-cli

./: pyproject.toml
docs/extra-cli-example/: pyproject.toml
docs/extra-cli-example/src/extra_cli/: example.py
src/extra_cli/: __main__.py  proposal.py
