[tool.poetry]
name = "euxfel-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "euxfel_cli", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
