[tool.poetry]
name = "extra-cli"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "extra_cli", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
typer = "^0.12.3"
structlog = "^24.1.0"

[tool.poetry.scripts]
extra = "extra_cli.__main__:app"

[tool.poetry.plugins."extra_cli.plugin"]
proposal = "extra_cli.proposal:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
